src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Admit_Type__c</fullName>
        <description>The category the potential applicant falls into for recruitment segmentation (Ex: New student, Transfer student, etc.)</description>
        <label>Admit Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Freshman</fullName>
                </value>
                <value>
                    <fullName>Transfer</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Affiliated_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The organizational account (Ex: business, high school, college, etc.) a student is affiliated with. This field along with the Affiliation Role, Affiliation Status, and Primary Affiliation fields creates an Affiliation when converted to a Contact. Filtered to exclude the Administrative Account Record Type.</description>
        <inlineHelpText>Enter the organizational account (Ex: business, high school, college, etc.) a student is affiliated with.</inlineHelpText>
        <label>Affiliated Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Affiliation_Role__c</fullName>
        <description>The role associated to the Affiliated Account, used in the Interaction Process.</description>
        <inlineHelpText>Select the role for the affiliation with an organizational account.</inlineHelpText>
        <label>Affiliation Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Advisor</fullName>
                </value>
                <value>
                    <fullName>Student</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Birthdate__c</fullName>
        <label>Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Career__c</fullName>
        <description>Returns the Career of the Recruitment Program, if there is one.</description>
        <formula>TEXT( Recruitment_Program__r.Career__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Career</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Constituent_ID__c</fullName>
        <description>A unique external ID field to house a prospect or student&apos;s ID for integration or manual data loading processes. It is also the identification code to be used for Lead Matching Rules as part of the Interaction process.</description>
        <label>Constituent ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Email_2__c</fullName>
        <inlineHelpText>describes the secondary email address of this lead.</inlineHelpText>
        <label>Email 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Groove_Convert__c</fullName>
        <formula>LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) &amp; &apos;lead/leadconvert.jsp?retURL=%2F&apos; &amp; Id &amp; &apos;&amp;id=&apos; &amp; Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is a Groove action button that creates the &quot;Convert&quot; URL</inlineHelpText>
        <label>Convert</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Groove_LinkedIn__c</fullName>
        <formula>&apos;https://www.linkedin.com/search/results/index/?keywords=&apos; &amp;
SUBSTITUTE(SUBSTITUTE(FirstName, &quot; &quot;, &quot;+&quot;), &quot;&amp;&quot;, &quot;%26&quot;) &amp; &apos;+&apos;
&amp; SUBSTITUTE(SUBSTITUTE(LastName, &quot; &quot;, &quot;+&quot;), &quot;&amp;&quot;, &quot;%26&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Is the URL of a &quot;LinkedIn&quot; lookup screen. This can be added to a Groove View and can be rendered as an action button in your email client.</inlineHelpText>
        <label>LinkedIn</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Groove_Log_a_Call__c</fullName>
        <formula>LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) &amp; &apos;00T/e?title=Call&amp;who_id=&apos; &amp; Id &amp; &apos;&amp;followup=1&amp;tsk5=Call&amp;retURL=%2F&apos; &amp; Id &amp; &apos;&amp;ent=Task&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Is the URL of a &quot;Log a Call&quot; screen. This can be added to a Groove View and can be rendered as an action button in your email client.</inlineHelpText>
        <label>Log a Call</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Groove_Notes__c</fullName>
        <inlineHelpText>Contains notes that are surfaced in Groove&apos;s sidebar by default.</inlineHelpText>
        <label>Groove Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Lookup_Mobile__c</fullName>
        <formula>RIGHT(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(LOWER(MobilePhone), &apos;%&apos;, &apos;&apos;), &apos;~&apos;, &apos;&apos;), &apos;@&apos;, &apos;&apos;) , &apos;&gt;&apos;, &apos;&apos;) , &apos;=&apos;, &apos;&apos;) , &apos;&lt;&apos;, &apos;&apos;) , &apos; &apos;, &apos;&apos;) , &apos;o&apos;, &apos;&apos;) , &apos;}&apos;, &apos;&apos;) , &apos;|&apos;, &apos;&apos;) , &apos;{&apos;, &apos;&apos;) , &apos;z&apos;, &apos;&apos;) , &apos;y&apos;, &apos;&apos;) , &apos;x&apos;, &apos;&apos;) , &apos;w&apos;, &apos;&apos;) , &apos;v&apos;, &apos;&apos;) , &apos;u&apos;, &apos;&apos;) , &apos;t&apos;, &apos;&apos;) , &apos;s&apos;, &apos;&apos;) , &apos;r&apos;, &apos;&apos;) , &apos;q&apos;, &apos;&apos;) , &apos;p&apos;, &apos;&apos;) , &apos;n&apos;, &apos;&apos;) , &apos;m&apos;, &apos;&apos;) , &apos;l&apos;, &apos;&apos;) , &apos;k&apos;, &apos;&apos;) , &apos;j&apos;, &apos;&apos;) , &apos;i&apos;, &apos;&apos;) , &apos;h&apos;, &apos;&apos;) , &apos;g&apos;, &apos;&apos;) , &apos;f&apos;, &apos;&apos;) , &apos;e&apos;, &apos;&apos;) , &apos;d&apos;, &apos;&apos;) , &apos;c&apos;, &apos;&apos;) , &apos;b&apos;, &apos;&apos;) , &apos;a&apos;, &apos;&apos;) , &apos;_&apos;, &apos;&apos;) , &apos;^&apos;, &apos;&apos;) , &apos;]&apos;, &apos;&apos;) , &apos;\\&apos;, &apos;&apos;) , &apos;[&apos;, &apos;&apos;) , &apos;?&apos;, &apos;&apos;) , &apos;;&apos;, &apos;&apos;) , &apos;:&apos;, &apos;&apos;) , &apos;/&apos;, &apos;&apos;) , &apos;.&apos;, &apos;&apos;) , &apos;-&apos;, &apos;&apos;) , &apos;,&apos;, &apos;&apos;) , &apos;+&apos;, &apos;&apos;) , &apos;*&apos;, &apos;&apos;) , &apos;)&apos;, &apos;&apos;) , &apos;(&apos;, &apos;&apos;) , &apos;&amp;&apos;, &apos;&apos;) , &apos;$&apos;, &apos;&apos;) , &apos;#&apos;, &apos;&apos;) , &apos;&quot;&apos;, &apos;&apos;) , &apos;!&apos;, &apos;&apos;) , &apos;-&apos;, &apos;&apos;),9)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays the last 9 digits of the mobile phone number. This field is a helper field for Groove dialer</inlineHelpText>
        <label>Lookup Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Lookup_Phone__c</fullName>
        <formula>RIGHT(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(LOWER(Phone), &apos;%&apos;, &apos;&apos;), &apos;~&apos;, &apos;&apos;), &apos;@&apos;, &apos;&apos;) , &apos;&gt;&apos;, &apos;&apos;) , &apos;=&apos;, &apos;&apos;) , &apos;&lt;&apos;, &apos;&apos;) , &apos; &apos;, &apos;&apos;) , &apos;o&apos;, &apos;&apos;) , &apos;}&apos;, &apos;&apos;) , &apos;|&apos;, &apos;&apos;) , &apos;{&apos;, &apos;&apos;) , &apos;z&apos;, &apos;&apos;) , &apos;y&apos;, &apos;&apos;) , &apos;x&apos;, &apos;&apos;) , &apos;w&apos;, &apos;&apos;) , &apos;v&apos;, &apos;&apos;) , &apos;u&apos;, &apos;&apos;) , &apos;t&apos;, &apos;&apos;) , &apos;s&apos;, &apos;&apos;) , &apos;r&apos;, &apos;&apos;) , &apos;q&apos;, &apos;&apos;) , &apos;p&apos;, &apos;&apos;) , &apos;n&apos;, &apos;&apos;) , &apos;m&apos;, &apos;&apos;) , &apos;l&apos;, &apos;&apos;) , &apos;k&apos;, &apos;&apos;) , &apos;j&apos;, &apos;&apos;) , &apos;i&apos;, &apos;&apos;) , &apos;h&apos;, &apos;&apos;) , &apos;g&apos;, &apos;&apos;) , &apos;f&apos;, &apos;&apos;) , &apos;e&apos;, &apos;&apos;) , &apos;d&apos;, &apos;&apos;) , &apos;c&apos;, &apos;&apos;) , &apos;b&apos;, &apos;&apos;) , &apos;a&apos;, &apos;&apos;) , &apos;_&apos;, &apos;&apos;) , &apos;^&apos;, &apos;&apos;) , &apos;]&apos;, &apos;&apos;) , &apos;\\&apos;, &apos;&apos;) , &apos;[&apos;, &apos;&apos;) , &apos;?&apos;, &apos;&apos;) , &apos;;&apos;, &apos;&apos;) , &apos;:&apos;, &apos;&apos;) , &apos;/&apos;, &apos;&apos;) , &apos;.&apos;, &apos;&apos;) , &apos;-&apos;, &apos;&apos;) , &apos;,&apos;, &apos;&apos;) , &apos;+&apos;, &apos;&apos;) , &apos;*&apos;, &apos;&apos;) , &apos;)&apos;, &apos;&apos;) , &apos;(&apos;, &apos;&apos;) , &apos;&amp;&apos;, &apos;&apos;) , &apos;$&apos;, &apos;&apos;) , &apos;#&apos;, &apos;&apos;) , &apos;&quot;&apos;, &apos;&apos;) , &apos;!&apos;, &apos;&apos;) , &apos;-&apos;, &apos;&apos;),9)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays the last 9 digits of the phone number. This field is a helper field for Groove dialer</inlineHelpText>
        <label>Lookup Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Normalized_Mobile__c</fullName>
        <description>Contains the last 9 digits of the mobile phone number, without non-numeric characters.</description>
        <inlineHelpText>Managed by Groove.</inlineHelpText>
        <label>Normalized Mobile</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Normalized_Phone__c</fullName>
        <description>Contains the last 9 digits of the phone number, without non-numeric characters.</description>
        <inlineHelpText>Managed by Groove.</inlineHelpText>
        <label>Normalized Phone</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ethnicity__c</fullName>
        <description>Based on IPEDs values, which also align with the corresponding HEDA field on Contact.</description>
        <label>Ethnicity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hispanic or Latino</fullName>
                </value>
                <value>
                    <fullName>Not Hispanic or Latino</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mogli_SMS__Avatar_URL__c</fullName>
        <description>URL for the lead&apos;s avatar picture</description>
        <inlineHelpText>Enter the URL for this lead&apos;s avatar picture</inlineHelpText>
        <label>Mogli Avatar URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__Default_Gateway__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default Gateway</label>
        <referenceTo>Mogli_SMS__Gateway__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__Mogli_Number__c</fullName>
        <externalId>true</externalId>
        <label>Mogli Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__Mogli_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mogli Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__SMS_Message_To_Send__c</fullName>
        <label>SMS Message To Send</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Previous_Contact_Id__c</fullName>
        <externalId>true</externalId>
        <label>Previous Contact Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Primary_Affiliation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Tracks whether the Affiliated Account is considered primary, used in the Interaction process.</description>
        <inlineHelpText>Check if the affiliation to the organizational account should be considered primary after Lead convert.</inlineHelpText>
        <label>Primary Affiliation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RFI_Notes__c</fullName>
        <description>Notes and other fields from RFI forms.</description>
        <label>RFI Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Race__c</fullName>
        <description>Based on IPEDs values, which also align with the corresponding HEDA field on Contact.</description>
        <label>Race</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>American Indian or Alaska Native</fullName>
                </value>
                <value>
                    <fullName>Black or African American</fullName>
                </value>
                <value>
                    <fullName>Native Hawaiian or Other Pacific Islander</fullName>
                </value>
                <value>
                    <fullName>White</fullName>
                </value>
                <value>
                    <fullName>Asian</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recruitment_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The marketable name for an official Academic Program (or group of Programs) that the individual is interested in. A lookup to Program with a filter criteria of Record Type = Recruitment Program. Tracked on the Opportunity when converted to a Contact.</description>
        <inlineHelpText>The marketable name for an official Academic Program (or group of Programs) that the individual is interested in.</inlineHelpText>
        <label>Recruitment Program</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Program__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Recruitment Program</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Leads with Recruitment Program</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Qualified</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>Mogli_SMS__All</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>